<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RockStar</string>
    <string name="app_label">Rock Star</string>
    <string name="tab_editor">Editor</string>


    <string name="settings_label">Settings</string>
    <string name="frets_tuning_label">Frets tuning</string>
    <string name="about_label">About</string>
    <string name="start_play">Start play</string>
    <string name="help_label">Help</string>
    <string name="menu">Menu</string>
    <string name="about_text">RockStar will give You more experience to play hard Power-chords , fast arpeggio and taping for two hands, like a real rock guitarist .Use a program like trainer and practice your individual technic. RockStar designed to simulate real electric-guitar. All sound loops was recorded from real "Ibanez RG",with strings 10-52.</string>
    <string name="number_of_bar">Number of frets:</string>
    <string name="sound_channels">Sound channels:</string>
    <string name="glissando">glissando</string>
    <string name="number_of_bar_help">Changing this value allow you to configure number of bar\'s what you can see on your display.</string>
    <string name="sound_channels_help">This setting allow you to configure how many sound channels can play in one time.</string>
    <string name="glissando_help">Assumes a smooth sliding on string from one sound to another through all sounds between them.</string>

    <string name="no_internet_connection">No internet connection...</string>
    <string name="help_title_settings">RockStar application settings</string>


    <string name="save_current_change_to">Save current change to</string>
    <string name="no">NO</string>
    <string name="ok">OK</string>
    <string name="yes">YES</string>
    <string name="save_tabs">Save tabs</string>
    <string name="please_provide_file_name">Please provide file name</string>
    <string name="file_system_error">File system error</string>
    <string name="set">Set</string>
    <string name="bets_per_minute">bets per minute</string>
    <string name="first_time_loading">First time loading</string>
    <string name="bpm">bpm</string>
    <string name="clear">Clear</string>
    <string name="do_you_want_to_clear_all_tabs">Do you want to clear all tabs</string>
    <string name="cancel">Cancel</string>
    <string name="alert">Alert</string>
    <string name="save_file">Save file</string>
    <string name="save">Save</string>
    <string name="tempo">Tempo</string>
    <string name="error">Error</string>
    <string name="listen_sample">listen sample</string>
    <string name="sound_pack">Sound pack</string>


    <string name="show_fret_number">show fret number</string>
    <string name="show_neck_slider">show neck slider</string>
    <string name="show_notes">show notes</string>
    <string name="show_touches">show touches</string>

    <string name="channels">channels</string>
    <string name="frets">frets</string>
    <string name="open_string">open string</string>


    <string name="facebook_app_id" translatable="false">1531825403764639</string>

    <color name="white">#ffffffff</color>
    <color name="gray">#ffa6a4a5</color>
    <color name="dark_gray">#444444</color>
    <color name="black">#000000</color>
    <color name="green">#ff9ad39a</color>
    <color name="blue">#ff516fb9</color>
    <color name="red">#fffb7d7b</color>
    <color name="blue_tr">#af516fb9</color>
    <color name="default_background">#000000</color>
    <color name="green_button">#00bb1e</color>

</resources>
