<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_3"
        android:scaleType="centerCrop"
        android:alpha="1">
    </ImageView>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/panel_1"
        android:id="@+id/relativeLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/label"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:textSize="16dp"
            android:textColor="@color/gray"
            android:text="@string/help_label"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/help_title_settings"
        android:id="@+id/textView0"
        android:layout_below="@+id/relativeLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textStyle="bold|italic"
        android:textSize="20dp"
        android:textColor="#ffbaeeff"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout2"
        android:background="@drawable/decorate_rect"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/imageView"
            android:src="@drawable/neck"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_bar_help"
            android:textStyle="italic|bold"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/textView2"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imageView"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="@color/dark_gray"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/number_of_bar"
        android:id="@+id/textView2"
        android:textStyle="italic|bold"
        android:layout_below="@+id/textView0"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sound_channels"
        android:textStyle="italic|bold"
        android:id="@+id/textView3"
        android:layout_below="@+id/relativeLayout2"
        android:layout_alignLeft="@+id/relativeLayout2"
        android:layout_alignStart="@+id/relativeLayout2"
        android:layout_alignRight="@+id/relativeLayout2"
        android:layout_alignEnd="@+id/relativeLayout2"
        android:layout_marginTop="20dp"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_marginRight="10dp"
        android:background="@drawable/decorate_rect"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/imageView2"
            android:src="@drawable/sound"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sound_channels_help"
            android:id="@+id/textViewCenter"
            android:textColor="@color/dark_gray"
            android:layout_alignTop="@+id/imageView2"
            android:layout_toRightOf="@+id/imageView2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textStyle="italic|bold"/>
    </RelativeLayout>

</RelativeLayout>